Add remaining parallel corpus translations and syllable count tables

--- a/docs/works/parallel-speech-corpus.mdx
+++ b/docs/works/parallel-speech-corpus.mdx
@@ -47,24 +47,25 @@ Number of Syllables:
 
 | Mandarin | English | Hîsyêô | Japanese | Spanish | Thai | Vietnamese |
 |----------|---------|--------|----------|---------|------|------------|
-|       60 |      70 |    110 |      119 |      94 |   64 |         49 |
+|       60 |      70 |    112 |      119 |      94 |   64 |         49 |
 
 <Tabs groupId="sobis-yê-cîes">
     <TabItem value="CMN" label="Mandarin">
-        我的软水机出了点问题。水位太高，而且总是溢水。麻烦你周二上午派个技术员来看看
-    ？这个星期我只有这天有空。再书面确认一下的话，就太感谢了。
+        我的软水机出了点问题。水位太高，而且总是溢水。麻烦你周二上午派个技术员来
+        看看？这个星期我只有这天有空。再书面确认一下的话，就太感谢了。
     </TabItem>
     <TabItem value="ENG" label="English">
-        I have a problem with my water softener. The water-level is too high and the overflow keeps 
-        dripping. Could you arrange to send an engineer on Tuesday morning please? It's the only day I can 
-        manage this week. I'd be grateful if you could confirm the arrangement in writing.
+        I have a problem with my water softener. The water-level is too high and
+        the overflow keeps dripping. Could you arrange to send an engineer on
+        Tuesday morning please? It's the only day I can manage this week. I'd be
+        grateful if you could confirm the arrangement in writing.
     </TabItem>
     <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
         noyo cînlî îxôlô tô foko nulun xîmu. mîkdol xîmu li odigon cên ûn û
-        ônî bucono xîmu wuîtsî zîgîl xîmu. ¿nîmû kôî li êo gô ôlê ônî xîûfû
-        hoî hêlxun lono yê lono mîhûon cî? ni li lono tôlkî fos noyo wuîtsî
-        xe li bîlûs, hoî wêxôn ôfo hôn. noyo bît li konxo hôn fos nîmû bît
-        wofok yôcno tô kon cukto.
+        ônî bucono xîmu wuîtsî zîgîl xîmu dîlê. ¿nîmû kôî ondo xe lufono ônî
+        xîûfû hoî hêlxun lono yê lono mîhûon cî? ni li lono tôlkî fos noyo
+        kôî tûu bi bîlûs hoî wêxôn ôfo hôn. noyo bît li konxo hôn fos nîmû
+        bît wofok yôcno onô tô cukto.
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="Japanese">
         浄水器の調子が悪いです。水位が高すぎるようで、水が漏れ続けています。申し訳あり
@@ -72,18 +73,20 @@ Number of Syllables:
         ものですから。日程をご確認の上、手紙にてお知らせいただければ幸いです。
     </TabItem>
     <TabItem value="SPA" label="Spanish">
-        Tengo un problema con mi descalcificador. El nivel de agua es demasiado alto y el rebosadero
-        gotea constantemente. ¿Por favor, podría enviarme un técnico el martes por la tarde? Es el único día 
-        que me va bien esta semana. ¿Me podrían llamar por teléfono antes de venir?
+        Tengo un problema con mi descalcificador. El nivel de agua es demasiado
+        alto y el rebosadero gotea constantemente. ¿Por favor, podría enviarme
+        un técnico el martes por la tarde? Es el único día que me va bien esta
+        semana. ¿Me podrían llamar por teléfono antes de venir?
     </TabItem>
     <TabItem value="THA" label="Thai">
-        ถังกรองความกระด้างของฉันมีปัญหา ระดบัของน้า สูงเกินไปและมีน้า หยดตลอดเวลา กรุณาจดัส่งวิศวกรมาเชา้วนัองัคาร
-        ซ่ึงเป็นวนั เดียวที่ฉนั ว่างในสปัดาห์น้ีจะดีมากถ้าคุณจะยืนยันการจัดการเป็นลายลักษณ์อักษร
+        ถังกรองความกระด้างของฉันมีปัญหา ระดบัของน้า สูงเกินไปและมีน้า
+        หยดตลอดเวลา กรุณาจดัส่งวิศวกรมาเชา้วนัองัคาร ซ่ึงเป็นวนั เดียวที่ฉนั
+        ว่างในสปัดาห์น้ีจะดีมากถ้าคุณจะยืนยันการจัดการเป็นลายลักษณ์อักษร
     </TabItem>
     <TabItem value="VIE" label="Vietnamese">
-        Máy lọc nước nhà tôi bị hỏng; nước cứ tràn ra bên ngoài. Anh làm ơn cho thợ đến sửa giúp tôi 
-        vào sáng thứ ba tới được không? Tôi chỉ rỗi vào mỗi hôm đó thôi. Nếu anh đồng ý; thì hãy gửi giấy 
-        báo lại cho tôi.
+        Máy lọc nước nhà tôi bị hỏng; nước cứ tràn ra bên ngoài. Anh làm ơn cho
+        thợ đến sửa giúp tôi vào sáng thứ ba tới được không? Tôi chỉ rỗi vào mỗi
+        hôm đó thôi. Nếu anh đồng ý; thì hãy gửi giấy báo lại cho tôi.
     </TabItem>
 </Tabs>
 
@@ -93,7 +96,7 @@ Number of Syllables:
 
 | Mandarin | English | Hîsyêô | Japanese | Spanish | Thai | Vietnamese |
 |----------|---------|--------|----------|---------|------|------------|
-|       73 |      86 |    131 |      162 |     135 |   74 |         93 |
+|       73 |      86 |    129 |      162 |     135 |   74 |         93 |
 
 <Tabs groupId="sobis-yê-cîes">
     <TabItem value="CMN" label="Mandarin">
@@ -101,41 +104,48 @@ Number of Syllables:
         责啊。下两个星期所有维修人员都已经安排出去了。难道我一直要把地下室当游泳池来用啊？
     </TabItem>
     <TabItem value="ENG" label="English">
-        Please put me through to the complaints department. The repair to the water main outside my 
-        house was unsuccessful, and my cellar's flooded. Your Water Services Department was singularly 
-        unsympathetic. All their repair teams are apparently booked out for the next two weeks. Am I 
+        Please put me through to the complaints department. The repair to the
+        water main outside my house was unsuccessful, and my cellar's flooded.
+        Your Water Services Department was singularly unsympathetic. All their
+        repair teams are apparently booked out for the next two weeks. Am I
         supposed to use the cellar as a swimming pool till then?
     </TabItem>
     <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
-        kûu lufono noyo mût yogô kûngîyo kon dês xowosê. kon xîûfû yê môkôfo xîmu konbokbo xe li
-        wokto yê niwos noyo, li sî funsût li êto xîmu hoî kûncîen yê bûmî sêl. yogô kûngîyo yê foko
-        yoldûn xîmu et nîmû bi gonzîl zûtô yôk. môî zomo kon xîûfû bi wuktomû li xîyôcû lon dûî wêxôn uklo. 
-        ¿bêsnêhot fos noyo yôn kûncîen yê bûmî sêl misli zomo xîmu kon dodê mût wokût ulyô ko?
+        kûu lufono noyo mût yogô kûngîyo yê cînlî lôc. kon xîûfû yê môkôfo xîmu
+        konbokbo xe li wokto yê niwos noyo, li sî funsût ûn û kûncîen yê bûmî
+        sêl li sî în dûbono. yogô kûngîyo yê yoldûn xîmu et nîmû bi gonzîl
+        zûtô yôk. môî zomo kon xîûfû bi wuktomû li xîyôcû lon dûî wêxôn uklo.
+        ¿bêsnêhot fos noyo yôn kûncîen yê bûmî sêl misli zomo xîmu kon dodê mût
+        wokût ulyô ko?
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="Japanese">
-        カスタマーサービスセンターをお願いします。我が家の前の水道管の修復工事がずさん
-        だったため、うちの地下室が水浸しになっています。御社の給水サービス係は非常に不愉快
-        な方で、「この先２週間、すべての修復スタッフの予定はつまっている」の一点張りでした
-        。その間うちの地下室を「水泳プールとして利用しておけ」とでもおっしゃるおつもりなの
-        でしょうか。
+        カスタマーサービスセンターをお願いします。我が家の前の水道管の修復工事が
+        ずさんだったため、うちの地下室が水浸しになっています。御社の給水サービス
+        係は非常に不愉快な方で、「この先２週間、すべての修復スタッフの予定はつ
+        まっている」の一点張りでした。その間うちの地下室を「水泳プールとして利用
+        しておけ」とでもおっしゃるおつもりなのでしょうか。
     </TabItem>
     <TabItem value="SPA" label="Spanish">
-        Por favor, póngame con el departamento de reclamaciones. Con la reparación de la cañería 
-        exterior de mi casa me han hecho una chapuza y se ha inundado el sótano. Su Departamento de 
-        Servicios al Cliente no me ha hecho ningún caso. Me han dicho que todos los fontaneros están 
-        ocupados durante las dos próximas semanas. ¿Se supone que hasta que vengan tengo que utilizar el 
-        sótano como piscina?
+        Por favor, póngame con el departamento de reclamaciones. Con la
+        reparación de la cañería exterior de mi casa me han hecho una chapuza y
+        se ha inundado el sótano. Su Departamento de Servicios al Cliente no me
+        ha hecho ningún caso. Me han dicho que todos los fontaneros están
+        ocupados durante las dos próximas semanas. ¿Se supone que hasta que
+        vengan tengo que utilizar el sótano como piscina?
     </TabItem>
     <TabItem value="THA" label="Thai">
-        กรุณาส่งเรื่องของฉนั ไปที่แผนกร้องเรียน การซ่อมระบบน้า ปะปาที่บา้นของฉนั ไม่สา เร็จ น้า ท่วมที่ห้องใตด้ิน
-        ฝ่ายบริการของคุณดูเหมือนจะไม่สนใจ ฝ่ายซ่อมแซมของคุณจะไม่มีเวลามาซ่อมให้ภายในสองอาทิตย์จะให้ฉนั ใชห้อ้งใตด้ินเป็นสระวา่ ยน้า เหรอ ? 
+        กรุณาส่งเรื่องของฉนั ไปที่แผนกร้องเรียน การซ่อมระบบน้า ปะปาที่บา้นของฉนั
+        ไม่สา เร็จ น้า ท่วมที่ห้องใตด้ิน ฝ่ายบริการของคุณดูเหมือนจะไม่สนใจ
+        ฝ่ายซ่อมแซมของคุณจะไม่มีเวลามาซ่อมให้ภายในสองอาทิตย์จะให้ฉนั
+        ใชห้อ้งใตด้ินเป็นสระวา่ ยน้า เหรอ ? 
     </TabItem>
     <TabItem value="VIE" label="Vietnamese">
-        Xin vui lòng chuyển máy cho tôi gặp bộ phận giải đáp thắc mắc khách hàng. Các anh thợ đã đến 
-        sửa đường ống nước trước cửa nhà tôi; nhưng chưa xong; nước vẫn chảy làm ngập tầng hầm nhà tôi. 
-        Tôi đã gọi điện đến thông báo nhưng người ta trả lời tôi là tất cả các đội thợ sửa ống nước đều bận 
-        trong hai tuần tới. Tôi thực sự không biết phải làm gì nữa. Nếu cứ tình hình này thì tầng hầm nhà tôi sẽ 
-        trở thành bể bơi.
+        Xin vui lòng chuyển máy cho tôi gặp bộ phận giải đáp thắc mắc khách
+        hàng. Các anh thợ đã đến sửa đường ống nước trước cửa nhà tôi; nhưng
+        chưa xong; nước vẫn chảy làm ngập tầng hầm nhà tôi. Tôi đã gọi điện đến
+        thông báo nhưng người ta trả lời tôi là tất cả các đội thợ sửa ống nước
+        đều bận trong hai tuần tới. Tôi thực sự không biết phải làm gì nữa. Nếu
+        cứ tình hình này thì tầng hầm nhà tôi sẽ trở thành bể bơi.
     </TabItem>
 </Tabs>
 
@@ -145,7 +155,7 @@ Number of Syllables:
 
 | Mandarin | English | Hîsyêô | Japanese | Spanish | Thai | Vietnamese |
 |----------|---------|--------|----------|---------|------|------------|
-|       73 |      85 |    131 |      153 |     111 |   85 |         55 |
+|       73 |      85 |    125 |      153 |     111 |   85 |         55 |
 
 <Tabs groupId="sobis-yê-cîes">
     <TabItem value="CMN" label="Mandarin">
@@ -159,11 +169,11 @@ Number of Syllables:
         appreciate immediate attempts to trace him because he sounded desperate.
     </TabItem>
     <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
-        foko yoldûn môtô yê boxô kon bôklôn folo li kôto. nûs dênêmêk xe yosten
-        ônî xokûlû gongoxî xe li sî cok sûn kon xokûlû bi yôk xe cûdo dêtoî umo.
-        nîo li xoînbo hoî nec fêlkonô onô. nîo dî sî ûnîdû hoî onwonî kon xokûlû
-        nûs 762 584. nûs bît li konxo yê dênêmêk mîoû yê fos wêtodû nîo nênko
-        fos li xoînbo û fos nîo fuî buswen kotonhon.
+        foko yoldûn môtô fîmôsyôs li kôto. nûs dênêmêk xe yosten ônî xokûlû gongoxî
+        xe li sî cok sûn kon xokûlû bi yôk xe cûdo dêtoî umo. nîo li xoînbo hoî
+        nec boxô onô. nîo dî sî ûnîdû hoî onwonî kon xokûlû nûs 762 584. nûs
+        bît li konxo yê dênêmêk mîoû yê fos wêtodû nîo nênko fos li xoînbo û fos
+        nîo fuî buswen kotonhon.
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="Japanese">
         もしもし、こちらは市の消防局です。先ほど緊急通報があったのですが、通報者が名前
@@ -193,7 +203,7 @@ Number of Syllables:
 
 | Mandarin | English | Hîsyêô | Japanese | Spanish | Thai | Vietnamese |
 |----------|---------|--------|----------|---------|------|------------|
-|       80 |      84 |    161 |      154 |     152 |  110 |         89 |
+|       80 |      84 |    155 |      154 |     152 |  110 |         89 |
 
 <Tabs groupId="sobis-yê-cîes">
     <TabItem value="CMN" label="Mandarin">
@@ -208,13 +218,12 @@ Number of Syllables:
         top priority and ensure punctuality. He expects the car at 5.30 sharp.
     </TabItem>
     <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
-        kûu tûu sôlû kon fiyûxît til wûôt yê lono yê hêlxun êto lôtfen. umo
-        Esbencu yê tîton Cesnut xîwon xe hoî boxô kon wedo yê oûtô xîkô et nonkû
-        yê boxô Hîclôû cihôû yôk êfun kînsê yê suhot toû xe ilik lono mutyu. kon
-        xîkô nîo li yôk cok mût êfun tîû dus yê suhot xêtî lêkin û nîo kûu sôlû
-        til odîgon zuko. kûu belêxu ni misli sonkon solwôc ûn kûu li gufis hôn
-        cônkôk ye wokut gîk. nîo motsi oûtô hoî êfun niswî dus yê suhot tîû et
-        cônkôk.
+        kûu tûu sôlû kon fiyûxît til wûôt yê hêlxun hêlxun lôtfen. umo Esbencu
+        yê tîton Cesnut xîwon xe hoî boxô kon wedo yê oûtô xîkô et nonkû yê sêdu
+        Hîclôû cihôû yôk êfun kînsê yê suhot toû xe ilik lono mutyu. kon xîkô
+        nîo li yôk cok mût êfun tîû dus yê suhot xêtî lêkin û nîo kûu sôlû til
+        odîgon zuko. kûu belêxu ni misli sonkon solwôc kûu li gufis hôn cônkôk
+        ye wokut gîk. nîo motsi oûtô hoî êfun niswî dus yê suhot tîû et cônkôk.
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="Japan">
         明日の早朝、中央通りの山田様宅へタクシーを差し向けて下さい。山田様は午前6時15
@@ -254,7 +263,7 @@ Number of Syllables:
 
 | Mandarin | English | Hîsyêô | Japanese | Spanish | Thai | Vietnamese |
 |----------|---------|--------|----------|---------|------|------------|
-|       64 |      67 |    101 |      129 |     103 |   78 |         80 |
+|       64 |      67 |    105 |      129 |     103 |   78 |         80 |
 
 <Tabs groupId="sobis-yê-cîes">
     <TabItem value="CMN" label="CMN">
@@ -270,8 +279,8 @@ Number of Syllables:
     <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
         noyo dênêmêk xe monodo umo Zîôlzu yê sinsî Sûindun ûn hûnsûon nîo. li sî
         nô sûn boxô 63 yê tîton Esbilûs Kilôs mût yogô dîzel yê sinsî Sûindun.
-        mût noyo cûdo onwonî nêos cî. nîo li sî nô bi êmê hoî niswî wuto ôhêl.
-        oldis fisun noyo û nîo li yôk fonmot sûn golo onwonî.
+        ¿mût noyo kôî cûdo onwonî nêos nîo cî? nîo li sî nô bi êmê hoî niswî
+        wuto ôhêl. oldis fisun noyo û nîo li yôk fonmot sûn golo onwonî.
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="JPN">
         大津市の原田さん夫妻と連絡を取りたいのですが。ご夫妻は神宮町63番地から大津市内
@@ -302,7 +311,7 @@ Number of Syllables:
 
 | Mandarin | English | Hîsyêô | Japanese | Spanish | Thai | Vietnamese |
 |----------|---------|--------|----------|---------|------|------------|
-|       69 |      84 |    120 |      159 |     136 |   93 |         81 |
+|       69 |      84 |    118 |      159 |     136 |   93 |         81 |
 
 <Tabs groupId="sobis-yê-cîes">
     <TabItem value="CMN" label="CMN">
@@ -317,11 +326,11 @@ Number of Syllables:
         excessive. Can you give me a firm date now?
     </TabItem>
     <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
-        kûu yundôû noyo mût yogô kûngîyo yoldûn. ônî mônîso noyo li sî kobût sûn
-        niswî wêxôn ôhêl cokyen ûn û noyo buswen xe fisun wokut fos ke xîûfû ni
-        ilik yôk. nîmû gomî sî ni hoî lono telô bêmon fos li dukwêlit ilik
-        wêxôn. noyo hêfîn fos nîmû fûî îxôlô yê bûzôk yogô lêkin ôfo li odigon
-        lôîcôk. ¿mût noyo cûdo lono cîes bi îbûdû ko?
+        kûu yundôû noyo mût yogô kûngîyo yoldûn. ônî mônîso non noyo li sî kobût
+        lon niswî wêxôn cokyen ûn û noyo buswen xe fisun wokut fos ke xîûfû ni
+        hoî. nîmû gomî sî ni hoî lono telô bêmon fos li dukwêlit ilik wêxôn.
+        noyo hêfîn fos nîmû fûî îxôlô yê bûzôk yogô lêkin ôfo li odigon lôîcôk.
+        ¿mût noyo cûdo lono cônkôk bi îbûdû ko?
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="JPN">
         サービスセンターをお願いします。テレビが故障してから既に3週間が経ちましたが、
@@ -330,21 +339,26 @@ Number of Syllables:
         時間がかかり過ぎなのではありませんか。確実に修理から戻ってくる日を教えてください。
     </TabItem>
     <TabItem value="SPA" label="SPA">
-        ¿Me podría poner con el departamento de reparaciones? Mi televisor se estropeó hace tres 
-        semanas. Ustedes me lo vinieron a recoger el día 13 y me prometieron que estaría arreglado al cabo de 
-        una semana. Comprendo que hayan podido tener problemas para conseguir las piezas de recambio, 
-        pero me parece que el retraso es excesivo. ¿Me pueden dar una fecha concreta de una vez por todas?
+        ¿Me podría poner con el departamento de reparaciones? Mi televisor se
+        estropeó hace tres semanas. Ustedes me lo vinieron a recoger el día 13 y
+        me prometieron que estaría arreglado al cabo de una semana. Comprendo
+        que hayan podido tener problemas para conseguir las piezas de recambio,
+        pero me parece que el retraso es excesivo. ¿Me pueden dar una fecha
+        concreta de una vez por todas?
     </TabItem>
     <TabItem value="THA" label="THA">
-        กรุณาต่อสายของผมไปที่แผนกบริการ เครื่องรับโทรทัศน์ผมเสียมา 3 สัปดาห์แล้ว ผมตอ้งการทราบว่าจะซ่อมเสร็จเมื่อไร
-        คุณมารับเครื่องไปต้งัแต่เมื่อวนั ที่ 13 และสญั ญาวา่ จะส่งคืนภายใน 1 สัปดาห์ผมเขา้ใจวา่ คุณมีปัญหาในเรื่องการจดัส่ง แต่วา่ มนั นานเกินกวา่ ที่จะรับได้
+        กรุณาต่อสายของผมไปที่แผนกบริการ เครื่องรับโทรทัศน์ผมเสียมา 3 สัปดาห์แล้ว
+        ผมตอ้งการทราบว่าจะซ่อมเสร็จเมื่อไร คุณมารับเครื่องไปต้งัแต่เมื่อวนั ที่
+        13 และสญั ญาวา่ จะส่งคืนภายใน 1 สัปดาห์ผมเขา้ใจวา่
+        คุณมีปัญหาในเรื่องการจดัส่ง แต่วา่ มนั นานเกินกวา่ ที่จะรับได้
         กรุณาช่วยยนืยนักา หนดส่งให้ผมดว้ย
     </TabItem>
     <TabItem value="TUR" label="TUR">
-        Tôi xin gặp bộ phận bảo hành. Ðã ba tuần nay các anh mang vô tuyến của tôi đi sửa. Tôi muốn 
-        biết bao giờ thì các anh sửa xong. Các anh đã đến lấy vô tuyến từ ngày mười ba và hứa sẽ mang trả 
-        trong tuần. Tôi biết là các anh gặp khó khăn khi tìm liên kiện thay thế; nhưng đã quá thời hạn rất lâu 
-        rồi. Tôi muốn các anh cho tôi một ngày hẹn chính xác.
+        Tôi xin gặp bộ phận bảo hành. Ðã ba tuần nay các anh mang vô tuyến của
+        tôi đi sửa. Tôi muốn biết bao giờ thì các anh sửa xong. Các anh đã đến
+        lấy vô tuyến từ ngày mười ba và hứa sẽ mang trả trong tuần. Tôi biết là
+        các anh gặp khó khăn khi tìm liên kiện thay thế; nhưng đã quá thời hạn
+        rất lâu rồi. Tôi muốn các anh cho tôi một ngày hẹn chính xác.
     </TabItem>
 </Tabs>
 
@@ -354,7 +368,7 @@ Number of Syllables:
 
 | Mandarin | English | Hîsyêô | Japanese | Spanish | Thai | Vietnamese |
 |----------|---------|--------|----------|---------|------|------------|
-|       57 |      67 |     97 |       83 |      79 |   60 |         52 |
+|       57 |      67 |     98 |       83 |      79 |   60 |         52 |
 
 <Tabs groupId="sobis-yê-cîes">
     <TabItem value="CMN" label="CMN">
@@ -368,9 +382,9 @@ Number of Syllables:
         to be vegetarian.
     </TabItem>
     <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
-        ¿nîmû mût noyo kôî cûdo zûnlo yê gubuyo kon mokon hoî boxô fêlkonô onô?
-        noyo niwos hoî onwonî En Dubulyû Kut yê tîton Kilonsî. noyo sûko uyo xe
-        li bolutê yê eswen yoûtî en sodolun. boxô yê nêxôdî Bolinêxun misli
+        ¿nîmû mût noyo kôî cûdo zûnlo yê gubuyo kon mokon hoî boxô fêlkonô onô
+        ko? noyo niwos hoî onwonî En Dubulyû Kut yê tîton Kilonsî. noyo sûko uyo
+        xe li bolutê yê eswen yoûtî en sodolun. boxô yê nêxôdî Bolinêxun misli
         numûno cî. noyo bît sûko fos ni li yôk xûnyu oksûn.
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="JPN">
@@ -400,7 +414,7 @@ Number of syllables:
 
 | Mandarin | English | Hîsyêô | Japanese | Spanish | Thai | Vietnamese |
 |----------|---------|--------|----------|---------|------|------------|
-|      100 |      92 |    149 |      156 |     153 |  103 |        102 |
+|      100 |      92 |    152 |      156 |     153 |  103 |        102 |
 
 <Tabs  groupId="sobis-yê-cîes">
     <TabItem value="CMN" label="CMN">
@@ -417,11 +431,12 @@ Number of syllables:
     </TabItem>
     <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
         hûnsûon noyo fuî yôcno wokût kon xîkô fonfûk hoî wuto uklo. ¿nîmû bi
-        dôkcon ke yundôû noyo hôn yôcno yê mîkdol munî yê cûtî êto ko? nîo fuî
-        zûnlo yê mozulis sûn suhot eson xe ilik mutyu, mût suhot tîû xe cihôû
-        mutyu, hoî sinsî Bolis, sînsî Buhûc, sinsî Filonkufûl, sinsî Lômo ûn
-        sinsî Honbûl bi lono ûnîdû. ¿nîmû kôî bêsnêhot kon xîkô obunyun yê lono
-        mûun ûn niwos dûndon ko? nîo sûko yôk niwos êfun cênbô yê bûzôk wîxês. 
+        dôkcon ke yundôû noyo hôn yôcno yê fûnbêtsi ûcûmî êto ko? nîo fuî zûnlo
+        yê mozulis sûn suhot eson xe ilik lono mutyu, mût suhot tîû xe cihôû
+        mutyu, hoî sinsî Bolis, sînsî Buhûc, sinsî Filonkufûl, sinsî Lômo, ûn
+        sinsî Honbûl hoî lono ûnîdû. ¿nîmû kôî bêsnêhot kon xîkô obunyun yê mûun
+        lono ûn niwos êfun xôn ko? nîo sûko yôk niwos êfun cênbô yê bûzôk
+        wîxês. 
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="JPN">
         来月、妻がパリ、ブリュージュ、フランクフルト、ローマ及びハンブルクで行われる一
@@ -457,6 +472,10 @@ Number of syllables:
 ### Text P1
 
 Number of syllables:
+
+| Mandarin | English | Hîsyêô | Japanese | Spanish | Thai | Vietnamese |
+|----------|---------|--------|----------|---------|------|------------|
+|       70 |     105 |    115 |      131 |     137 |   96 |         77 |
 
 <Tabs groupId="sobis-yê-cîes">
     <TabItem value="CMN" label="CMN">
@@ -513,6 +532,10 @@ Number of syllables:
 
 Number of syllables:
 
+| Mandarin | English | Hîsyêô | Japanese | Spanish | Thai | Vietnamese |
+|----------|---------|--------|----------|---------|------|------------|
+|       65 |      76 |    130 |      142 |     120 |   79 |         81 |
+
 <Tabs  groupId="sobis-yê-cîes">
     <TabItem value="CMN" label="CMN">
         快派个救护车到朝阳园16号。有个老人在冰上滑倒，腿摔断了，不能动。到这里只能经
@@ -527,10 +550,10 @@ Number of syllables:
     </TabItem>
     <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
         kûu lufono oûtô kon bucono mût onwonî ses yê tîton Cotwik hoî zelen môî.
-        umo nokdo bi lûcik li sî zîgîl hoî xîmu bukû li êo kobût ôlê gonbu nîo
-        kôî li êo yôk nô. xe tuluti tîton onô, bi tôlkî tô tîton Cûlcu. kon gîk
-        yê tîton Bolku li sî bundu til kon xîûfû tîton. ôlê îlê yê cîgîlsu kotonhon
-        et Cesto Gilonzu fisun sî êo ûn ni motsi kon gîk.
+        umo nokdo li sî zîgîl lûcik hoî xîmu bukû li êo kobût ôlê gonbu nîo kôî
+        li êo yôk nô ôlê cizi noyo. xe tuluti tîton onô, bi tôlkî tô tîton
+        Cûlcu. boxô kon gîk yê tîton Bolku li sî bundu til kon xîûfû. ôlê îlê yê
+        cîgîlsu kotonhon et Cesto Gilonzu fisun sî êo ûn ni motsi kon gîk.
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="JPN">
         救急車をお願いします。山田町16番地で、ご年配の男性が氷の上で滑って、足を
@@ -564,6 +587,9 @@ Number of syllables:
 
 Number of syllables:
 
+| Mandarin | English | Hîsyêô | Japanese | Spanish | Thai | Vietnamese |
+|----------|---------|--------|----------|---------|------|------------|
+|       77 |      91 |    152 |      152 |     119 |   95 |         90 |
 
 <Tabs groupId="sobis-yê-cîes">
     <TabItem value="CMN" label="CMN">
@@ -584,7 +610,7 @@ Number of syllables:
         bîek hûunhu, ûn niswî bîek sûsôn sûît cênbô yê sîkîn Kulismus. onwonî
         kon gîk li niwos yê ônî cûdo cîgîlsu Belnodô: boxô ses yê tîton Wobî
         Yokûntîk. ¿nîmû kôî bêmon kon lufono ilik lono dûî dus niswî yê wuhot
-        bole ko? noyo bît li konxo hôn fos nîmû bît yôk fisun êo umo fos li êo
+        bole ko? noyo bît li konxo hôn fos nîmû bît fisun yôk êo umo fos li êo
         kôlmûdul.
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="JPN">
@@ -622,6 +648,10 @@ Number of syllables:
 
 Number of syllables:
 
+| Mandarin | English | Hîsyêô | Japanese | Spanish | Thai | Vietnamese |
+|----------|---------|--------|----------|---------|------|------------|
+|       78 |      77 |    133 |      117 |      93 |   81 |         75 |
+
 <Tabs groupId="sobis-yê-cîes">
     <TabItem value="CMN" label="CMN">
         昨天晚上，我打开前门，把猫放出去。夜景真好，我走到花园，呼吸新鲜空气。然后，
@@ -636,7 +666,12 @@ Number of syllables:
         force the door open!
     </TabItem>
     <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
-        hoî lono xobêk û noyo li êo but ôlê zinkon fôhon til xe 
+        hoî lono xobêk û noyo li êo but ôlê zinkon fôhon til xe cûlosun fos
+        mocko li wokto. ni li lono mûun hosîn lôîcôk bînê noyo bi sêl tuluti
+        comen til kon wedo yê woyû nêôs. bînê noyo tenkîn cuskîdô hoî fos zinkon
+        dî bundu hoî soden noyo. noyo yosten fos besol cizî noyo bi wokto. hoî
+        solwôc môî û ônî cixîn doîcêl noyo hoî fos noyo dênêmêk xe ôlê zinkon li
+        êo but foxo.
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="JPN">
         昨夜、猫を外に出してやろうと玄関を開けたら、とても気持のいい夜だった。新
@@ -669,6 +704,10 @@ Number of syllables:
 
 Number of syllables:
 
+| Mandarin | English | Hîsyêô | Japanese | Spanish | Thai | Vietnamese |
+|----------|---------|--------|----------|---------|------|------------|
+|       76 |      91 |    151 |      139 |     119 |   77 |         61 |
+
 <Tabs groupId="sobis-yê-cîes">
     <TabItem value="CMN" label="CMN">
         我发现在英国的长途火车上睡觉太难了。一方面，那座位一点都不舒服。还有其他乘客
@@ -684,7 +723,12 @@ Number of syllables:
         and wakes me.
     </TabItem>
     <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
-        TBC
+        noyo hoî môî wokût yosten sî kutin conzodo hoî wûôt kîldo yê oûtô kîskô
+        hoî fenûo Bitin. hôn kut û noyo hoî yôk wokut ôlê cizî noyo kôî li êo
+        lohot hoî sityo. bînê ônî tuluti dîzel bi sodolun kôto bi oltû lôîcôk;
+        yodo lôc môî lôîcôk: nîo kôs gônyumon conzodo. bi ûtok li cuskîdô cûnfû
+        sînêxîs yê kûldû xe hoî tîton. hôn fos noyo bi bîlûs dî conzodo, ônî
+        fohoso doînbî li sî gîk li êo wîlî ôlê noyo.
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="JPN">
         日本の長距離列車の旅で、うまく眠れたためしがない。まず，座席で快適な姿勢
@@ -717,6 +761,10 @@ Number of syllables:
 
 Number of syllables:
 
+| Mandarin | English | Hîsyêô | Japanese | Spanish | Thai | Vietnamese |
+|----------|---------|--------|----------|---------|------|------------|
+|       68 |      88 |    142 |      150 |     126 |   73 |         56 |
+
 <Tabs groupId="sobis-yê-cîes">
     <TabItem value="CMN" label="CMN">
         上个周末没能到你家里聚餐，真对不起。我真的想去看你。倒霉的是，我正要出发时出
@@ -730,7 +778,12 @@ Number of syllables:
         tripped on a loose step in the dark, and broke my ankle.
     </TabItem>
     <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
-        TBC
+        zûtô fos noyo li gîk mût côûfon yê lono mûun hoî kônyêc wêxôn. li
+        hîzon êto û xe dêko nîmû bi dîzel. bi kûyô û noyo cînlî sî zîgîl bi
+        ubênus hoî xe ondo xe li cok. ni hoî fos noyo li sî nô til xe gomî dibo
+        yê îskô kûôxi cûbû sûn kûncîen yê kon wuîtsî yê mokon. noyo fuî yôk sî
+        zôtêstô fûnbêtsi til xe socok kûon, xobo wowoê mût gîsgûl sodilû hoî
+        nêlô li êo kobût ôlê zûntûlu wowoê noyo.
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="JPN">
         先週末の夕食会に伺えず、申し訳ありませんでした。皆様にお会いできるのを本
@@ -766,6 +819,10 @@ Number of syllables:
 
 Number of syllables:
 
+| Mandarin | English | Hîsyêô | Japanese | Spanish | Thai | Vietnamese |
+|----------|---------|--------|----------|---------|------|------------|
+|       57 |      62 |     99 |      126 |      81 |   56 |         55 |
+
 <Tabs groupId="sobis-yê-cîes">
     <TabItem value="CMN" label="CMN">
         到我家有条翻山的小路。有的本地人说山上有鬼。天黑以后就没有人敢从那走。当然，
@@ -778,7 +835,10 @@ Number of syllables:
         I just like the picturesque route through the estate.
     </TabItem>
     <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
-        TBC
+        li tîton gosîl û fos tuluti tôxûtsi mût niwos noyo. yoûtî umo fêlkonô
+        kôto fos tôxûtsi fuî lûok nîecni. xûnyu umo sûko xe tuluti comen ulyô
+        cihôû nêlô. bi wuktomû û noyo îmon yôk ozûul dês fûnbêtsi hiklihos. noyo
+        bi tôlkî sûko tîton yê dêko xe misli toswîl, gitno boxô.
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="JPN">
         わが家へ至る近道があるんです。その道はあの丘を越えて行くもので、地元の人たちは
