add link to github project

--- a/docs/works/parallel-speech-corpus.mdx
+++ b/docs/works/parallel-speech-corpus.mdx
@@ -36,6 +36,9 @@ materials](https://www.science.org/doi/suppl/10.1126/sciadv.aaw2594/suppl_file/a
 > **5**, eaaw2594 (2019). DOI:
 > [10.1126/sciadv.aaw2594](https://doi.org/10.1126/sciadv.aaw2594)
 
+The authors graciously provided some of the data on
+[GitHub](https://github.com/keruiduo/SupplMatInfoRate).
+
 ## Passages
 
 The passages for 6 languages are presented below, you can check out the details of 11 more
