Add info admonition for which gods

--- a/docs/religion/metaphysics.mdx
+++ b/docs/religion/metaphysics.mdx
@@ -223,6 +223,27 @@ multiplicity). This allows you to have a a metaphysical point (an anchor) that
 you can turn your mind towards. The ritual acts help us to further adjust our
 alignment keeping us focused on the Divine Mind as much as possible.
 
+:::info Which Gods?
+
+Are the gods described on this site the only gods or are the gods of other
+pantheons also valid anchors to turn towards? Given that these gods are
+personifications, they can shift and change and be one thing to one person and a
+whole other thing to someone else. The set of gods described on this site were
+carefully planned to cover all forms that one might encounter in the modern
+life. You may notice that the gods that cover the domains of the natural forces
+have been reduced to [one](gods/dimîtu.mdx). This is because we now know these
+forces to be qualities and relationships of the cosmic soul (the laws of
+physics, geology, biology, etc.). You may also notice that no god is placed
+above the others, this is to emphasize the lack of hierarchy within the Divine
+Mind (a lack of hierarchy is also one of the virtues). If you can critically
+analyze the cultural touchstones of your preferred gods and remove the influence
+of the shards or if you've already gone down this path due to your own work,
+then you can definitely worship your existing pantheon. The work of turning
+towards the Divine Mind can take many forms and no one is a master over its
+praxis.
+
+:::
+
 ## Ethics
 
 How do we derive an ethics from this metaphysics? The Everything is itself
