--- a/docs/religion/metaphysics.mdx
+++ b/docs/religion/metaphysics.mdx
@@ -216,7 +216,7 @@ lift our souls up towards the Cosmos.
 ## Gods
 
 The gods themselves are similar to the individual souls explained previously:
-they are slices or *aspects* of the Divine Mind. [Gods](..\category\gods)
+they are slices or *aspects* of the Divine Mind. [Gods](/docs/category/gods/)
 represent specific domains of ideas or forms and they are essentially
 *personifications* of parts of the Divine Mind (applying the dimension of
 multiplicity). This allows you to have a a metaphysical point (an anchor) that
