Add more citations

--- a/docs/religion/metaphysics.mdx
+++ b/docs/religion/metaphysics.mdx
@@ -109,8 +109,9 @@ up of innumerable quantum-entangled parts and these entities themselves interact
 via quantum activity. Through these observations by even our human minds, we can
 recognize that this would be enough quantum activity to be an emergent
 concsciousness and we call that consciousness The Divine Mind. The Divine Mind
-is effectively self-realized through the all-encompassing nature of The
-Everything.
+is effectively [self-realized through the all-encompassing
+nature](https://faculty.salisbury.edu/~jdhatley/plotinus.htm#:~:text=it%20were%2C%20and-,Its%20superabundance%20makes%20something%20other%20than%20Itself,-.%20Its%20halt%20and)
+of The Everything.
 
 ### The Divine Mind
 
@@ -122,16 +123,17 @@ self-awareness. Therefore the mind is or becomes active and aware of itself or
 rather of The Everything. To observe The Everything that exists outside of being
 and non-being is to engage in infinite and sometimes paradoxical observations
 and through experiencing all this, the Divine Mind is or becomes all-knowing and
-all-powerful and has, through its knowledge and power contains or built a
-perfect copy of the Everything inside of its mind (think of it like a digital
-lossless copy). This mental model of The Everything, through both unity and
-multiplicity measurements, has created something truly complex and
-interconnected inside of the Divine Mind which is the ideas or *forms* of
-everything that exists within The Everything. Harkening back to the emergent
-consciousnesses theory, we again use our tools of dimensions to see that there
-is a sufficiently large network of quantum activity in this divine "image" of
-The Everything. What emerges into a new plane is a consciousness that we call
-the Cosmic Soul.
+all-powerful and has, through its knowledge and power, [builds a perfect copy of
+the
+Everything](https://faculty.salisbury.edu/~jdhatley/plotinus.htm#:~:text=Since%20it%20halts%20and%20turns%20towards%20the%20One%20that%20it%20may%20see%2C%20it%20becomes%20at%20once%20Nous%20and%20being.%20Resembling%20the%20One%20thus%20Nous%20produces%20in%20the%20same%20way%2C%20pouring%20forth%20a%20multiple%20power.%20Just%20as%20That%2C%20Which%20was%20before%20it%2C%20poured%20forth%20its%20likeness%2C%20so%20what%20Nous%20produces%20is%20a%20likeness%20of%20itself.)
+inside of its mind (think of it like a digital lossless copy). This mental model
+of The Everything, through both unity and multiplicity measurements, has created
+something truly complex and interconnected inside of the Divine Mind which is
+the ideas or *forms* of everything that exists within The Everything. Harkening
+back to the emergent consciousnesses theory, we again use our tools of
+dimensions to see that there is a sufficiently large network of quantum activity
+in this divine "image" of The Everything. What emerges into a new plane is a
+consciousness that we call the Cosmic Soul.
 
 ### The Cosmic Soul
 
@@ -305,10 +307,15 @@ with no masters.
 
 If one chooses to read various primary and secondary sources on the Greek
 pantheon, it is inevitable that one would reach Plotinus and the rest of the
-Neoplatonists. To make a complete religion that covers all religious expression,
-it became a necessity that there be a metaphysics that complements the
-mythology. A good metaphysics is the glue that binds rituals and principles of a
-religion to the cultural practices of a community.
+Neoplatonists. There was a tendency to interweave religion and philosophy and in
+many ways it was also the precursor to what we now call
+[Theology](https://en.wikipedia.org/wiki/Theology). In order for the Hîsyêô
+religion to be complete enough to do philosophy or theology and not be an
+example of Eco's [small
+world](https://archive.org/details/limitsofinterpre00ecourich), it became a
+necessity that there be a metaphysics that complements the mythology. A good
+metaphysics is the glue that binds rituals and principles of a religion to the
+cultural practices of a community. 
 
 
 <HisyeoTooltip />
