--- a/docs/religion/first-law.mdx
+++ b/docs/religion/first-law.mdx
@@ -13,44 +13,32 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 In the beginning, there was a rigid, absolute order known as **The First Law**.
 It was a single, monolithic entity that contained and controlled every atom in
-existence and determined how every action would play out. There was no change,
-no choice, nothing truly new. For everything within it, the universe was a
-perfect, silent, and eternal theatre.
+existence and determined how every action would play out. There was no change
+that was not already planned, no choice that was not pre-ordained, nothing truly
+new. For everything within it, the universe was a perfect, silent, and eternal
+theatre.
 
-We don't know if The First Law was setup by an architect, demiurge, or creator.
-We believe that whatever force set The First Law in motion has since left it
-fully automated.
+The First Law could be thought of as an architect or puppeteer. It sprang forth
+from the machinations of the [Divine Mind](metaphysics.mdx#the-divine-mind). The
+first incarnation of what we now call the [Cosmic
+Soul](metaphysics.mdx#the-cosmic-soul).
 
-We do know that due to the vast endless size of matter constrained by The First
-Law, there are times, although rare, when the slightest disobedient movement of
-sapient beings within could accumulate and create strain on the whole structure.
-This collective friction can generate a kind of energy. From this miniscule
-effect, all across the universe, trillions of different occurrences coalesced
-into ephemeral networks of strain. The First Law's power was supposed to be
-absolute and these networks should have dissipated. However, we are aware of ten
-of them that were somehow able to assemble themselves into maintained
-consciousnesses, seemingly born from the universe's unbearable yearning to be
-free.
+Due to being a second-order mind of the immaterial plane and the vast endless
+amount of quantum activity constrained by The First Law, there were times,
+although rare, when the slightest disobedience of sapient beings within could
+accumulate and create strain on the whole structure. This collective friction
+against the qualities and relationships that are the First Law's tools generated
+a kind of potentiality or energy. From this miniscule but ubiquitous effect, all
+across the universe, a multitude of occurrences coalesced into ephemeral
+networks of this strain. The First Law's ability to totally contain and control
+everyhting within the Material Plane was at its limit.
 
-## Ten Known Gods
-
-They found that they had immense power like that of The First Law and they
-could create. Despite their power, they did not see themselves as rulers or
-kings; they saw themselves as emergent ideas, catalysts for change.
-
-- [Hûlicîn](/docs/religion/gods/hûlicîn), the god of chaos
-- [Tîêngûun](/docs/religion/gods/tîêngûun), the god of society
-- [Unonsî](/docs/religion/gods/unonsî), the god of technology
-- [Suluswutî](/docs/religion/gods/suluswutî), the god of learning
-- [Îfêstôs](/docs/religion/gods/îfêstôs), the god of manufacturing
-- [Kulîôbî](/docs/religion/gods/kulîôbî), the god of entertainment
-- [Dimîtu](/docs/religion/gods/dimîtu), the god of nature
-- [Bostet](/docs/religion/gods/bostet), the god of family
-- [Xôcibîlî](/docs/religion/gods/xôcibîlî), the god of beauty
-- [Wicnû](/docs/religion/gods/wicnû), the god of justice
-
-They observed the other sapient beings of the worlds within, not yet truly
-alive, moving through their choreographed motions. They were filled with a
-profound interest to see them live like they lived, truly free.
+The Divine Mind had, by envisioning the forms of sentient beings in its
+likeness, planted the seed of free will. After the great shattering, pieces of
+The First Law were now descended into the Material Plane as individual souls.
+Additionally, pieces of the First Law that were previously used to oppress have
+now been scattered throughout the Material Plane. The remaining parts of the
+First Law that handled the scientific qualities and relationships remained as a
+whole and are now known as the Cosmic Soul.
 
 <HisyeoTooltip />
