Add some addtl notes on the ortho page

--- a/docs/language/orthography.mdx
+++ b/docs/language/orthography.mdx
@@ -36,7 +36,7 @@ vowels than the Latin encoding has vowel characters. Due to this, usage of
 There are two common diacritics used: the circumflex and the diaresis. This site
 used to be written using the diaresis (and one vowel had a single dot ⟨İ i⟩
 whereas the non-diacritical version was dotless ⟨I ı⟩. This was changed to a
-circumflex due to some possible misinterpretations of vowels and because the
+circumflex ⟨Î î⟩ due to some possible misinterpretations of vowels and because the
 circumflex is both featural and often is used for similar changes in natural
 languages. That being said, there is only one diacritic used in the orthography
 so which one you use isn't really a major concern. Learning the vowel pairs
@@ -60,7 +60,12 @@ diacritics.
 Based on the abugida writing system
 [Likanu](https://en.kokanu.com/reference/pronunciation.html) created for
 [Kokanu](https://en.kokanu.com). However, due to the large phoneme inventory,
-there were many modifications to make it fit.
+there were many modifications to make it fit. This system uses symbols that are
+available in some large unicode-supporting fonts but there may be some
+compatibility issues. Additionally, kerning is usually not well-supported
+because these characters aren't commonly used together in the way that this
+system uses them. The example below is making use of Noto Sans but Charis SIL
+and Gentium Plus are two other supporting fonts.
 
 <iframe width="100%" height="560" src="//jsfiddle.net/MadcapJake/64L3nrgk/embedded/result/" frameborder="0" loading="lazy" allowtransparency="true" allowfullscreen="true"></iframe>
 
